--- a/css/patient_dashboard.css
+++ b/css/patient_dashboard.css
@@ -185,6 +185,7 @@ table button {
     margin: 5px;
     color: rgb(255, 254, 254);
     font-size: larger;
+    border-radius: 15px;
 }
 
 .cancel {
