--- a/css/style.css
+++ b/css/style.css
@@ -5,33 +5,38 @@
 
 body {
     text-align: center;
-    
+
 }
 
 .container {
-    height: 100vh;
+    /* height: 100vh; */
     width: 90vw;
     margin: 30px;
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
 }
-.doctors{
+
+.doctors {
     display: flex;
     flex-wrap: wrap;
     width: 70vw;
     margin: auto;
 }
+
 .list {
     width: 30vh;
-    margin:50px auto;
+    margin: 50px auto;
     padding: 5vh;
-    justify-content: center;
-    align-items: center;
     border-radius: 45px;
-    box-shadow: 10px 10px 15px;
+    box-shadow: 2px 2px 3px;
+    text-align: left;
 }
+
 .list img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
     height: 20vh;
     width: 20vh;
-    border-radius: 50px;
-    margin: 10px;
+    border-radius: 80px;
 }
